# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("dash") {
  sources = [
    "src/alias.c",
    "src/alias.h",
    "src/arith_yacc.c",
    "src/arith_yacc.h",
    "src/arith_yylex.c",
    "src/bltin/bltin.h",
    "src/bltin/printf.c",
    "src/bltin/test.c",
    "src/bltin/times.c",
    "src/builtins.c",
    "src/builtins.h",
    "src/cd.c",
    "src/cd.h",
    "src/error.c",
    "src/error.h",
    "src/eval.c",
    "src/eval.h",
    "src/exec.c",
    "src/exec.h",
    "src/expand.c",
    "src/expand.h",
    "src/hetio.c",
    "src/hetio.h",
    "src/histedit.c",
    "src/init.c",
    "src/init.h",
    "src/input.c",
    "src/input.h",
    "src/jobs.c",
    "src/jobs.h",
    "src/machdep.h",
    "src/mail.c",
    "src/mail.h",
    "src/main.c",
    "src/main.h",
    "src/memalloc.c",
    "src/memalloc.h",
    "src/miscbltin.c",
    "src/miscbltin.h",
    "src/myhistedit.h",
    "src/mystring.c",
    "src/mystring.h",
    "src/nodes.c",
    "src/nodes.h",
    "src/options.c",
    "src/options.h",
    "src/output.c",
    "src/output.h",
    "src/parser.c",
    "src/parser.h",
    "src/redir.c",
    "src/redir.h",
    "src/shell.h",
    "src/show.c",
    "src/show.h",
    "src/signames.c",
    "src/syntax.c",
    "src/syntax.h",
    "src/system.c",
    "src/system.h",
    "src/token.h",
    "src/token_vars.h",
    "src/trap.c",
    "src/trap.h",
    "src/var.c",
    "src/var.h",
  ]

  defines = [
    "BSD",
    "SHELL",
    "IFS_BROKEN",
  ]

  cflags_c = [
    "-include", rebase_path("config.h", root_build_dir)
  ]

  include_dirs = [
    "src",
  ]
}
